New XTest DB support - DBFeeder changed to support a new DB schema. Also some xml beans from PES are modified and some unused stuff is removed. The state before this commit was tagged by the before-new-xtest-db tag.